@@ -141,6 +141,7 @@ struct nfc_driver {
   const char *(*strerror)(const struct nfc_device *pnd);
 
   int (*initiator_init)(struct nfc_device *pnd);
+  int (*initiator_init_secure_element)(struct nfc_device *pnd);
   int (*initiator_select_passive_target)(struct nfc_device *pnd,  const nfc_modulation nm, const uint8_t *pbtInitData, const size_t szInitData, nfc_target *pnt);
   int (*initiator_poll_target)(struct nfc_device *pnd, const nfc_modulation *pnmModulations, const size_t szModulations, const uint8_t uiPollNr, const uint8_t btPeriod, nfc_target *pnt);
   int (*initiator_select_dep_target)(struct nfc_device *pnd, const nfc_dep_mode ndm, const nfc_baud_rate nbr, const nfc_dep_info *pndiInitiator, nfc_target *pnt, const int timeout);
